# war-room

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
data/: feedback.jsonl  metrics.csv  release_notes.md  thresholds.yaml
outputs/: trace.jsonl
purplemerit_war_room.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: config.py  data_loader.py  decision_engine.py  main.py  models.py  orchestrator.py  state.py  tracing.py
src/agents/: base.py  coordinator_agent.py  data_analyst_agent.py  marketing_agent.py  risk_critic_agent.py
src/llm/: base.py  factory.py
src/purplemerit_war_room.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tools/: feedback_tools.py  metrics_tools.py
tests/: test_agents.py  test_decision_engine.py  test_smoke.py  test_tools.py  test_traceability.py
ui/: app.py
