[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "purplemerit-war-room"
version = "0.1.0"
description = "Multi-agent launch war room simulation for product launch decisions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "ruff>=0.5.0"]

[dependency-groups]
dev = ["pytest>=8.2.0", "ruff>=0.5.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
